--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.clojure</groupId>
     <artifactId>pom.contrib</artifactId>
-    <version>0.0.23</version>
+    <version>0.0.25</version>
   </parent>
 
   <developers>
@@ -15,6 +15,17 @@
       <name>Alex Taggart</name>
     </developer>
   </developers>
+
+  <build>
+<plugins>
+  <plugin>
+    <groupId>com.theoryinpractise</groupId>
+    <artifactId>clojure-maven-plugin</artifactId>
+    <version>1.3.8</version>
+    <extensions>true</extensions>
+  </plugin>
+</plugins>
+  </build>
 
   <scm>
     <connection>scm:git:git@github.com:ataggart/clojure.data.codec.git</connection>
@@ -29,5 +40,11 @@
   		<version>1.5</version>
   		<scope>test</scope>
   	</dependency>
+        <dependency>
+          <groupId>swank-clojure</groupId>
+          <artifactId>swank-clojure</artifactId>
+          <scope>runtime</scope>
+          <version>1.3.3</version>
+        </dependency>
   </dependencies>
 </project>
